# neurareview

./: .gitignore  .pre-commit-config.yaml  ACTION_USAGE.md  AGENTIC_FEATURES.md  Dockerfile  PRECOMMIT.md  README.md  action.yml  config.yaml  example-workflow.yml  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: codex-review.yml  neura-review.yml
src/: __init__.py  agentic_reviewer.py  ai_provider_factory.py  ai_reviewer.py  cli.py  comment_manager.py  config.py  context_tool.py  diff_parser.py  function_schemas.py  github_client.py  models.py  neura_review.py  prompt.md  prompt_manager.py
src/ai_providers/: __init__.py  base.py  openai_provider.py
src/prompts/: README.md  agentic_system_prompt.md  traditional_review_prompt.md
