[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neura-review"
version = "0.1.0"
description = "AI-powered code review bot for GitHub pull requests"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "NeuraReview" }]
keywords = ["code-review", "github", "ai", "openai"]
dependencies = [
  "openai>=1.0.0",
  "PyGithub>=2.0.0",
  "unidiff>=0.7.0",
]

[project.scripts]
neura-review = "src.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]


